# sr2-csd

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/hardi/: hardi-scheme.bval  hardi-scheme.bvec
scripts/: run_demo.py
src/sr2csd/: __init__.py  model.py
src/sr2csd/core/: __init__.py  csdeconv_mrtrix.py  fit_qp.py  qp_solver.py
src/sr2csd/utils/: denoise.py  multi_voxel.py  response.py  sh_basis.py  sh_projection.py
tests/: test.py  test_hardi_ssst.py  test_sherbrooke_ssst.py  test_smoke.py
